--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,7 @@
 </head>
 
 <body ${bodyAttrs}>
+  <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><symbol viewBox="0 0 185.3 185.3" id="chevron" xmlns="http://www.w3.org/2000/svg"><path d="M92.7 144.4c-2.8 0-5.5-1-7.6-3.1l-82-82c-4.2-4.2-4.2-11 0-15.2 4.2-4.2 11-4.2 15.2 0l74.3 74.3 74.3-74.3c4.2-4.2 11-4.2 15.2 0 4.2 4.2 4.2 11 0 15.2l-81.9 81.9c-2 2.1-4.8 3.2-7.5 3.2z"/></symbol></svg>
   ${app}
   ${scripts}
 </body>
