--- a/src/index.html
+++ b/src/index.html
@@ -96,5 +96,14 @@
       </symbol>
     </svg>
     ${app} ${scripts}
+    <script
+      type="text/javascript"
+      src="https://cdn.weglot.com/weglot.min.js"
+    ></script>
+    <script>
+      Weglot.initialize({
+        api_key: "wg_b19629c69a68c77bc0e5783f3a97edf54"
+      });
+    </script>
   </body>
 </html>
