--- a/src/index.html
+++ b/src/index.html
@@ -96,14 +96,6 @@
       </symbol>
     </svg>
     ${app} ${scripts}
-    <script
-      type="text/javascript"
-      src="https://cdn.weglot.com/weglot.min.js"
-    ></script>
-    <script>
-      Weglot.initialize({
-        api_key: "wg_b19629c69a68c77bc0e5783f3a97edf54"
-      });
-    </script>
+    <script src="//d.bablic.com/snippet/5e568165279d870001cbcdca.js?version=3.9"></script>
   </body>
 </html>
