--- a/src/index.html
+++ b/src/index.html
@@ -81,20 +81,7 @@
   </head>
 
   <body ${bodyAttrs}>
-    <svg
-      xmlns="http://www.w3.org/2000/svg"
-      xmlns:xlink="http://www.w3.org/1999/xlink"
-    >
-      <symbol
-        viewBox="0 0 185.3 185.3"
-        id="chevron"
-        xmlns="http://www.w3.org/2000/svg"
-      >
-        <path
-          d="M92.7 144.4c-2.8 0-5.5-1-7.6-3.1l-82-82c-4.2-4.2-4.2-11 0-15.2 4.2-4.2 11-4.2 15.2 0l74.3 74.3 74.3-74.3c4.2-4.2 11-4.2 15.2 0 4.2 4.2 4.2 11 0 15.2l-81.9 81.9c-2 2.1-4.8 3.2-7.5 3.2z"
-        />
-      </symbol>
-    </svg>
+    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><symbol viewBox="0 0 185.3 185.3" id="chevron" xmlns="http://www.w3.org/2000/svg"><path d="M92.7 144.4c-2.8 0-5.5-1-7.6-3.1l-82-82c-4.2-4.2-4.2-11 0-15.2 4.2-4.2 11-4.2 15.2 0l74.3 74.3 74.3-74.3c4.2-4.2 11-4.2 15.2 0 4.2 4.2 4.2 11 0 15.2l-81.9 81.9c-2 2.1-4.8 3.2-7.5 3.2z"/></symbol><symbol viewBox="0 0 512 512" id="code" xmlns="http://www.w3.org/2000/svg"><path d="M506.8 242.8L388.4 117.4c-7.3-7.7-19.4-8.1-27.1-.8-7.7 7.3-8.1 19.4-.8 27.1l106 112.3-106.1 112.3c-7.3 7.7-6.9 19.9.8 27.1 3.7 3.5 8.5 5.2 13.2 5.2 5.1 0 10.2-2 14-6l118.4-125.4c6.9-7.4 6.9-19 0-26.4zM151.6 368.3L45.6 256l106-112.3c7.3-7.7 6.9-19.9-.8-27.1-7.7-7.3-19.9-6.9-27.1.8L5.3 242.8c-7 7.4-7 19 0 26.4l118.3 125.4c3.8 4 8.9 6 14 6 4.7 0 9.5-1.7 13.2-5.2 7.7-7.3 8-19.4.8-27.1zM287.1 52.7c-10.5-1.6-20.3 5.6-21.9 16.1l-56.3 368.6c-1.6 10.5 5.6 20.3 16.1 21.9 1 .1 2 .2 2.9.2 9.3 0 17.5-6.8 19-16.3l56.3-368.6c1.5-10.5-5.7-20.3-16.1-21.9z"/></symbol></svg>
     ${app} ${scripts}
   </body>
 </html>
