--- a/src/index.html
+++ b/src/index.html
@@ -1,144 +1,150 @@
 <!DOCTYPE html>
 <html ${htmlAttrs}>
 
-  <head>
-    <!-- Cookie Consent by https://www.FreePrivacyPolicy.com -->
-    <script type="text/javascript"
-      src="//www.FreePrivacyPolicy.com/cookie-consent/releases/3.0.0/cookie-consent.js"></script>
-    <script type="text/javascript">
-      document.addEventListener("DOMContentLoaded", function () {
-        cookieconsent.run({
-          notice_banner_type: "headline",
-          consent_type: "express",
-          palette: "light",
-          change_preferences_selector: "#changePreferences",
-          language: "fr",
-          website_name: "Rabbit"
-        });
+<head>
+  <link rel="preconnect" href="https://app.snipcart.com">
+  <link rel="preconnect" href="https://cdn.snipcart.com">
+  <link rel="stylesheet" href="https://cdn.snipcart.com/themes/v3.2.1/default/snipcart.css" />
+  <script async src="https://cdn.snipcart.com/themes/v3.2.1/default/snipcart.js"></script>
+  <!-- Cookie Consent by https://www.FreePrivacyPolicy.com -->
+  <script type="text/javascript"
+    src="//www.FreePrivacyPolicy.com/cookie-consent/releases/3.0.0/cookie-consent.js"></script>
+  <script type="text/javascript">
+    document.addEventListener("DOMContentLoaded", function () {
+      cookieconsent.run({
+        notice_banner_type: "headline",
+        consent_type: "express",
+        palette: "light",
+        change_preferences_selector: "#changePreferences",
+        language: "fr",
+        website_name: "Rabbit"
       });
-    </script>
+    });
+  </script>
 
-    <!-- GTAG -->
-    <script type="text/plain" cookie-consent="tracking" async
-      src="https://www.googletagmanager.com/gtag/js?id=UA-155176140-1"></script>
-    <script type="text/plain" cookie-consent="tracking">
+  <!-- GTAG -->
+  <script type="text/plain" cookie-consent="tracking" async
+    src="https://www.googletagmanager.com/gtag/js?id=UA-155176140-1"></script>
+  <script type="text/plain" cookie-consent="tracking">
       window.dataLayer = window.dataLayer || []; function gtag() { dataLayer.push(arguments); } gtag('js', new Date()); gtag('config', 'UA-155176140-1', { 'anonymize_ip': true });
     </script>
-    <!-- end of GTAG-->
-    <!-- End Cookie Consent -->
-    ${head}
-    <style>
-      .cc_dialog {
+  <!-- end of GTAG-->
+  <!-- End Cookie Consent -->
+  ${head}
+  <style>
+    .cc_dialog {
+      opacity: 0;
+      animation: appear .5s 4s;
+      animation-fill-mode: forwards;
+    }
+
+    @keyframes appear {
+      0% {
         opacity: 0;
-        animation: appear .5s 4s;
-        animation-fill-mode: forwards;
       }
 
-      @keyframes appear {
-        0% {
-          opacity: 0;
-        }
-
-        100% {
-          opacity: 1;
-        }
+      100% {
+        opacity: 1;
       }
+    }
 
-      /* Cookies */
-      .cc_dialog.headline {
-        background-color: #2d2d38 !important;
-        padding: 1.5rem 2rem !important;
-        position: fixed !important;
-        bottom: 0 !important;
-        top: auto !important;
+    /* Cookies */
+    .cc_dialog.headline {
+      background-color: #2d2d38 !important;
+      padding: 1.5rem 2rem !important;
+      position: fixed !important;
+      bottom: 0 !important;
+      top: auto !important;
+    }
+
+    .cc_dialog_headline {
+      display: none !important;
+    }
+
+    .cc_dialog_text {
+      font-size: 13px !important;
+    }
+
+    @media (max-width: 1200px) {
+      .cc_dialog {
+        max-width: 100% !important;
       }
+    }
 
-      .cc_dialog_headline {
-        display: none !important;
-      }
+    .cc-dialog * {
+      color: white !important;
+    }
 
-      .cc_dialog_text {
-        font-size: 13px !important;
-      }
+    .light.cc_dialog button.cc_b_ok {
+      border-radius: 10px;
+      background-color: white !important;
+      color: black !important;
+    }
 
-      @media (max-width: 1200px) {
-        .cc_dialog {
-          max-width: 100% !important;
-        }
-      }
+    .light.cc_dialog button.cc_b_cp {
+      border-radius: 10px;
+      color: white !important;
+      background-color: black !important;
+      margin-left: 10px !important;
+    }
 
-      .cc-dialog * {
-        color: white !important;
-      }
+    .light.cc_dialog .cc_dialog_headline,
+    .light.cc_dialog .cc_dialog_text {
+      color: white !important;
+    }
+  </style>
+</head>
 
-      .light.cc_dialog button.cc_b_ok {
-        border-radius: 10px;
-        background-color: white !important;
-        color: black !important;
-      }
-
-      .light.cc_dialog button.cc_b_cp {
-        border-radius: 10px;
-        color: white !important;
-        background-color: black !important;
-        margin-left: 10px !important;
-      }
-
-      .light.cc_dialog .cc_dialog_headline,
-      .light.cc_dialog .cc_dialog_text {
-        color: white !important;
-      }
-    </style>
-  </head>
-
-  <body ${bodyAttrs}>
-    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-      <symbol viewBox="0 -53 384 384" id="burger" xmlns="http://www.w3.org/2000/svg">
-        <path
-          d="M368 154.7H16c-8.8 0-16-7.2-16-16s7.2-16 16-16h352c8.8 0 16 7.2 16 16s-7.2 16-16 16zm0 0M368 32H16C7.2 32 0 24.8 0 16S7.2 0 16 0h352c8.8 0 16 7.2 16 16s-7.2 16-16 16zm0 0M368 277.3H16c-8.8 0-16-7.2-16-16s7.2-16 16-16h352c8.8 0 16 7.2 16 16s-7.2 16-16 16zm0 0" />
-      </symbol>
-      <symbol viewBox="0 0 185.3 185.3" id="chevron" xmlns="http://www.w3.org/2000/svg">
-        <path
-          d="M92.7 144.4c-2.8 0-5.5-1-7.6-3.1l-82-82c-4.2-4.2-4.2-11 0-15.2 4.2-4.2 11-4.2 15.2 0l74.3 74.3 74.3-74.3c4.2-4.2 11-4.2 15.2 0 4.2 4.2 4.2 11 0 15.2l-81.9 81.9c-2 2.1-4.8 3.2-7.5 3.2z" />
-      </symbol>
-      <symbol viewBox="0 0 22.9 22.9" id="close" xmlns="http://www.w3.org/2000/svg">
-        <path
-          d="M.3 1.9C-.1 1.5-.1.8.3.3c.4-.4 1.1-.4 1.6 0l9.5 9.5L20.9.3c.4-.4 1.1-.4 1.6 0 .4.4.4 1.2 0 1.6L13 11.4l9.5 9.5c.4.4.4 1.1 0 1.6-.4.4-1.1.4-1.6 0L11.4 13l-9.5 9.5c-.4.4-1.1.4-1.6 0-.4-.4-.4-1.2 0-1.6l9.5-9.5L.3 1.9z" />
-      </symbol>
-      <symbol viewBox="0 0 512 512" id="close-circled" xmlns="http://www.w3.org/2000/svg">
-        <path
-          d="M256 512C114.8 512 0 397.2 0 256S114.8 0 256 0s256 114.8 256 256-114.8 256-256 256zm0-475.4C135 36.6 36.6 135 36.6 256S135 475.4 256 475.4 475.4 377 475.4 256 377 36.6 256 36.6zm0 0" />
-        <path
-          d="M347.4 365.7c-4.7 0-9.4-1.8-12.9-5.4L151.6 177.4c-7.1-7.1-7.1-18.7 0-25.9 7.1-7.1 18.7-7.1 25.9 0l182.9 182.9c7.1 7.1 7.1 18.7 0 25.9-3.6 3.6-8.2 5.4-12.9 5.4zm0 0" />
-        <path
-          d="M164.6 365.7c-4.7 0-9.4-1.8-12.9-5.4-7.1-7.1-7.1-18.7 0-25.9l182.9-182.9c7.1-7.1 18.7-7.1 25.9 0 7.1 7.1 7.1 18.7 0 25.9L177.6 360.3c-3.6 3.6-8.2 5.4-12.9 5.4zm0 0" />
-      </symbol>
-      <symbol viewBox="0 0 512 512" id="fb" xmlns="http://www.w3.org/2000/svg">
-        <path
-          d="M512 256C512 114.6 397.4 0 256 0S0 114.6 0 256s114.6 256 256 256c1.5 0 3 0 4.5-.1V312.7h-55v-64.1h55v-47.2c0-54.7 33.4-84.5 82.2-84.5 23.4 0 43.5 1.7 49.3 2.5v57.2h-33.6c-26.5 0-31.7 12.6-31.7 31.1v40.8h63.5l-8.3 64.1h-55.2v189.5C433.7 471.4 512 372.9 512 256z" />
-      </symbol>
-      <symbol viewBox="0 0 511 511.9" id="insta" xmlns="http://www.w3.org/2000/svg">
-        <path
-          d="M510.95 150.5c-1.2-27.2-5.598-45.898-11.9-62.102-6.5-17.199-16.5-32.597-29.6-45.398-12.802-13-28.302-23.102-45.302-29.5-16.296-6.3-34.898-10.7-62.097-11.898C334.648.3 325.949 0 256.449 0s-78.199.3-105.5 1.5c-27.199 1.2-45.898 5.602-62.097 11.898-17.204 6.5-32.602 16.5-45.403 29.602-13 12.8-23.097 28.3-29.5 45.3-6.3 16.302-10.699 34.9-11.898 62.098C.75 177.801.449 186.5.449 256s.301 78.2 1.5 105.5c1.2 27.2 5.602 45.898 11.903 62.102 6.5 17.199 16.597 32.597 29.597 45.398 12.801 13 28.301 23.102 45.301 29.5 16.3 6.3 34.898 10.7 62.102 11.898 27.296 1.204 36 1.5 105.5 1.5s78.199-.296 105.5-1.5c27.199-1.199 45.898-5.597 62.097-11.898a130.934 130.934 0 0074.903-74.898c6.296-16.301 10.699-34.903 11.898-62.102 1.2-27.3 1.5-36 1.5-105.5s-.102-78.2-1.3-105.5zm-46.098 209c-1.102 25-5.301 38.5-8.801 47.5-8.602 22.3-26.301 40-48.602 48.602-9 3.5-22.597 7.699-47.5 8.796-27 1.204-35.097 1.5-103.398 1.5s-76.5-.296-103.403-1.5c-25-1.097-38.5-5.296-47.5-8.796C94.551 451.5 84.45 445 76.25 436.5c-8.5-8.3-15-18.3-19.102-29.398-3.5-9-7.699-22.602-8.796-47.5-1.204-27-1.5-35.102-1.5-103.403s.296-76.5 1.5-103.398c1.097-25 5.296-38.5 8.796-47.5C61.25 94.199 67.75 84.1 76.352 75.898c8.296-8.5 18.296-15 29.398-19.097 9-3.5 22.602-7.7 47.5-8.801 27-1.2 35.102-1.5 103.398-1.5 68.403 0 76.5.3 103.403 1.5 25 1.102 38.5 5.3 47.5 8.8 11.097 4.098 21.199 10.598 29.398 19.098 8.5 8.301 15 18.301 19.102 29.403 3.5 9 7.699 22.597 8.8 47.5 1.2 27 1.5 35.097 1.5 103.398s-.3 76.301-1.5 103.301zm0 0" />
-        <path
-          d="M256.45 124.5c-72.598 0-131.5 58.898-131.5 131.5s58.902 131.5 131.5 131.5c72.6 0 131.5-58.898 131.5-131.5s-58.9-131.5-131.5-131.5zm0 216.8c-47.098 0-85.302-38.198-85.302-85.3s38.204-85.3 85.301-85.3c47.102 0 85.301 38.198 85.301 85.3s-38.2 85.3-85.3 85.3zm0 0M423.852 119.3c0 16.954-13.747 30.7-30.704 30.7-16.953 0-30.699-13.746-30.699-30.7 0-16.956 13.746-30.698 30.7-30.698 16.956 0 30.703 13.742 30.703 30.699zm0 0" />
-      </symbol>
-      <symbol viewBox="0 0 512 512" id="linkedin" xmlns="http://www.w3.org/2000/svg">
-        <path
-          d="M256 0C114.6 0 0 114.6 0 256s114.6 256 256 256 256-114.6 256-256S397.4 0 256 0zm-74.4 387h-62.3V199.4h62.3zm-31.2-213.2h-.4c-20.9 0-34.5-14.4-34.5-32.4 0-18.4 13.9-32.4 35.3-32.4 21.3 0 34.5 14 34.9 32.4 0 18-13.5 32.4-35.3 32.4zm256 213.2h-62.3V286.7c0-25.2-9-42.4-31.6-42.4-17.2 0-27.5 11.6-32 22.8-1.6 4-2.1 9.6-2.1 15.2v104.8h-62.3s.8-170 0-187.6h62.3v26.6c8.3-12.8 23.1-31 56.2-31 41 0 71.8 26.8 71.8 84.4zm0 0" />
-      </symbol>
-      <symbol viewBox="-105 0 512 512" id="mouse" xmlns="http://www.w3.org/2000/svg">
-        <path
-          d="M150.6 0C67.6 0 0 67.6 0 150.6v210.8C0 444.4 67.6 512 150.6 512s150.6-67.6 150.6-150.6V150.6C301.2 67.6 233.6 0 150.6 0zm119.9 361.4c0 66.1-53.8 119.9-119.9 119.9-66.1 0-119.9-53.8-119.9-119.9V150.6c0-66.1 53.8-119.9 119.9-119.9 66.1 0 119.9 53.8 119.9 119.9zm0 0" />
-        <path
-          d="M150.6 101.9c-8.5 0-15.4 6.9-15.4 15.4V188c0 8.5 6.9 15.4 15.4 15.4S166 196.5 166 188v-70.7c0-8.5-6.9-15.4-15.4-15.4zm0 0" />
-      </symbol>
-      <symbol viewBox="0 0 512 512" id="twitter" xmlns="http://www.w3.org/2000/svg">
-        <path
-          d="M512 97.2c-19 8.4-39.3 13.9-60.5 16.6 21.8-13 38.4-33.4 46.2-58-20.3 12.1-42.7 20.6-66.6 25.4C411.9 60.7 384.4 48 354.5 48c-58.1 0-104.9 47.2-104.9 105 0 8.3.7 16.3 2.4 23.9-87.3-4.3-164.5-46.1-216.4-109.8-9.1 15.7-14.4 33.7-14.4 53.1 0 36.4 18.7 68.6 46.6 87.2-16.9-.3-33.4-5.2-47.4-12.9v1.2c0 51 36.4 93.4 84.1 103.1-8.5 2.3-17.9 3.5-27.5 3.5-6.7 0-13.5-.4-19.9-1.8 13.6 41.6 52.2 72.1 98.1 73.1-35.7 27.9-81.1 44.8-130.1 44.8-8.6 0-16.9-.4-25.1-1.4 46.5 29.9 101.6 47 161 47 193.2 0 298.8-160 298.8-298.7 0-4.6-.2-9.1-.4-13.6 20.8-14.7 38.3-33.2 52.6-54.5z" />
-      </symbol>
-    </svg>
-    ${app} ${scripts}
-  </body>
+<body ${bodyAttrs}>
+  <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+    <symbol viewBox="0 -53 384 384" id="burger" xmlns="http://www.w3.org/2000/svg">
+      <path
+        d="M368 154.7H16c-8.8 0-16-7.2-16-16s7.2-16 16-16h352c8.8 0 16 7.2 16 16s-7.2 16-16 16zm0 0M368 32H16C7.2 32 0 24.8 0 16S7.2 0 16 0h352c8.8 0 16 7.2 16 16s-7.2 16-16 16zm0 0M368 277.3H16c-8.8 0-16-7.2-16-16s7.2-16 16-16h352c8.8 0 16 7.2 16 16s-7.2 16-16 16zm0 0" />
+    </symbol>
+    <symbol viewBox="0 0 185.3 185.3" id="chevron" xmlns="http://www.w3.org/2000/svg">
+      <path
+        d="M92.7 144.4c-2.8 0-5.5-1-7.6-3.1l-82-82c-4.2-4.2-4.2-11 0-15.2 4.2-4.2 11-4.2 15.2 0l74.3 74.3 74.3-74.3c4.2-4.2 11-4.2 15.2 0 4.2 4.2 4.2 11 0 15.2l-81.9 81.9c-2 2.1-4.8 3.2-7.5 3.2z" />
+    </symbol>
+    <symbol viewBox="0 0 22.9 22.9" id="close" xmlns="http://www.w3.org/2000/svg">
+      <path
+        d="M.3 1.9C-.1 1.5-.1.8.3.3c.4-.4 1.1-.4 1.6 0l9.5 9.5L20.9.3c.4-.4 1.1-.4 1.6 0 .4.4.4 1.2 0 1.6L13 11.4l9.5 9.5c.4.4.4 1.1 0 1.6-.4.4-1.1.4-1.6 0L11.4 13l-9.5 9.5c-.4.4-1.1.4-1.6 0-.4-.4-.4-1.2 0-1.6l9.5-9.5L.3 1.9z" />
+    </symbol>
+    <symbol viewBox="0 0 512 512" id="close-circled" xmlns="http://www.w3.org/2000/svg">
+      <path
+        d="M256 512C114.8 512 0 397.2 0 256S114.8 0 256 0s256 114.8 256 256-114.8 256-256 256zm0-475.4C135 36.6 36.6 135 36.6 256S135 475.4 256 475.4 475.4 377 475.4 256 377 36.6 256 36.6zm0 0" />
+      <path
+        d="M347.4 365.7c-4.7 0-9.4-1.8-12.9-5.4L151.6 177.4c-7.1-7.1-7.1-18.7 0-25.9 7.1-7.1 18.7-7.1 25.9 0l182.9 182.9c7.1 7.1 7.1 18.7 0 25.9-3.6 3.6-8.2 5.4-12.9 5.4zm0 0" />
+      <path
+        d="M164.6 365.7c-4.7 0-9.4-1.8-12.9-5.4-7.1-7.1-7.1-18.7 0-25.9l182.9-182.9c7.1-7.1 18.7-7.1 25.9 0 7.1 7.1 7.1 18.7 0 25.9L177.6 360.3c-3.6 3.6-8.2 5.4-12.9 5.4zm0 0" />
+    </symbol>
+    <symbol viewBox="0 0 512 512" id="fb" xmlns="http://www.w3.org/2000/svg">
+      <path
+        d="M512 256C512 114.6 397.4 0 256 0S0 114.6 0 256s114.6 256 256 256c1.5 0 3 0 4.5-.1V312.7h-55v-64.1h55v-47.2c0-54.7 33.4-84.5 82.2-84.5 23.4 0 43.5 1.7 49.3 2.5v57.2h-33.6c-26.5 0-31.7 12.6-31.7 31.1v40.8h63.5l-8.3 64.1h-55.2v189.5C433.7 471.4 512 372.9 512 256z" />
+    </symbol>
+    <symbol viewBox="0 0 511 511.9" id="insta" xmlns="http://www.w3.org/2000/svg">
+      <path
+        d="M510.95 150.5c-1.2-27.2-5.598-45.898-11.9-62.102-6.5-17.199-16.5-32.597-29.6-45.398-12.802-13-28.302-23.102-45.302-29.5-16.296-6.3-34.898-10.7-62.097-11.898C334.648.3 325.949 0 256.449 0s-78.199.3-105.5 1.5c-27.199 1.2-45.898 5.602-62.097 11.898-17.204 6.5-32.602 16.5-45.403 29.602-13 12.8-23.097 28.3-29.5 45.3-6.3 16.302-10.699 34.9-11.898 62.098C.75 177.801.449 186.5.449 256s.301 78.2 1.5 105.5c1.2 27.2 5.602 45.898 11.903 62.102 6.5 17.199 16.597 32.597 29.597 45.398 12.801 13 28.301 23.102 45.301 29.5 16.3 6.3 34.898 10.7 62.102 11.898 27.296 1.204 36 1.5 105.5 1.5s78.199-.296 105.5-1.5c27.199-1.199 45.898-5.597 62.097-11.898a130.934 130.934 0 0074.903-74.898c6.296-16.301 10.699-34.903 11.898-62.102 1.2-27.3 1.5-36 1.5-105.5s-.102-78.2-1.3-105.5zm-46.098 209c-1.102 25-5.301 38.5-8.801 47.5-8.602 22.3-26.301 40-48.602 48.602-9 3.5-22.597 7.699-47.5 8.796-27 1.204-35.097 1.5-103.398 1.5s-76.5-.296-103.403-1.5c-25-1.097-38.5-5.296-47.5-8.796C94.551 451.5 84.45 445 76.25 436.5c-8.5-8.3-15-18.3-19.102-29.398-3.5-9-7.699-22.602-8.796-47.5-1.204-27-1.5-35.102-1.5-103.403s.296-76.5 1.5-103.398c1.097-25 5.296-38.5 8.796-47.5C61.25 94.199 67.75 84.1 76.352 75.898c8.296-8.5 18.296-15 29.398-19.097 9-3.5 22.602-7.7 47.5-8.801 27-1.2 35.102-1.5 103.398-1.5 68.403 0 76.5.3 103.403 1.5 25 1.102 38.5 5.3 47.5 8.8 11.097 4.098 21.199 10.598 29.398 19.098 8.5 8.301 15 18.301 19.102 29.403 3.5 9 7.699 22.597 8.8 47.5 1.2 27 1.5 35.097 1.5 103.398s-.3 76.301-1.5 103.301zm0 0" />
+      <path
+        d="M256.45 124.5c-72.598 0-131.5 58.898-131.5 131.5s58.902 131.5 131.5 131.5c72.6 0 131.5-58.898 131.5-131.5s-58.9-131.5-131.5-131.5zm0 216.8c-47.098 0-85.302-38.198-85.302-85.3s38.204-85.3 85.301-85.3c47.102 0 85.301 38.198 85.301 85.3s-38.2 85.3-85.3 85.3zm0 0M423.852 119.3c0 16.954-13.747 30.7-30.704 30.7-16.953 0-30.699-13.746-30.699-30.7 0-16.956 13.746-30.698 30.7-30.698 16.956 0 30.703 13.742 30.703 30.699zm0 0" />
+    </symbol>
+    <symbol viewBox="0 0 512 512" id="linkedin" xmlns="http://www.w3.org/2000/svg">
+      <path
+        d="M256 0C114.6 0 0 114.6 0 256s114.6 256 256 256 256-114.6 256-256S397.4 0 256 0zm-74.4 387h-62.3V199.4h62.3zm-31.2-213.2h-.4c-20.9 0-34.5-14.4-34.5-32.4 0-18.4 13.9-32.4 35.3-32.4 21.3 0 34.5 14 34.9 32.4 0 18-13.5 32.4-35.3 32.4zm256 213.2h-62.3V286.7c0-25.2-9-42.4-31.6-42.4-17.2 0-27.5 11.6-32 22.8-1.6 4-2.1 9.6-2.1 15.2v104.8h-62.3s.8-170 0-187.6h62.3v26.6c8.3-12.8 23.1-31 56.2-31 41 0 71.8 26.8 71.8 84.4zm0 0" />
+    </symbol>
+    <symbol viewBox="-105 0 512 512" id="mouse" xmlns="http://www.w3.org/2000/svg">
+      <path
+        d="M150.6 0C67.6 0 0 67.6 0 150.6v210.8C0 444.4 67.6 512 150.6 512s150.6-67.6 150.6-150.6V150.6C301.2 67.6 233.6 0 150.6 0zm119.9 361.4c0 66.1-53.8 119.9-119.9 119.9-66.1 0-119.9-53.8-119.9-119.9V150.6c0-66.1 53.8-119.9 119.9-119.9 66.1 0 119.9 53.8 119.9 119.9zm0 0" />
+      <path
+        d="M150.6 101.9c-8.5 0-15.4 6.9-15.4 15.4V188c0 8.5 6.9 15.4 15.4 15.4S166 196.5 166 188v-70.7c0-8.5-6.9-15.4-15.4-15.4zm0 0" />
+    </symbol>
+    <symbol viewBox="0 0 512 512" id="twitter" xmlns="http://www.w3.org/2000/svg">
+      <path
+        d="M512 97.2c-19 8.4-39.3 13.9-60.5 16.6 21.8-13 38.4-33.4 46.2-58-20.3 12.1-42.7 20.6-66.6 25.4C411.9 60.7 384.4 48 354.5 48c-58.1 0-104.9 47.2-104.9 105 0 8.3.7 16.3 2.4 23.9-87.3-4.3-164.5-46.1-216.4-109.8-9.1 15.7-14.4 33.7-14.4 53.1 0 36.4 18.7 68.6 46.6 87.2-16.9-.3-33.4-5.2-47.4-12.9v1.2c0 51 36.4 93.4 84.1 103.1-8.5 2.3-17.9 3.5-27.5 3.5-6.7 0-13.5-.4-19.9-1.8 13.6 41.6 52.2 72.1 98.1 73.1-35.7 27.9-81.1 44.8-130.1 44.8-8.6 0-16.9-.4-25.1-1.4 46.5 29.9 101.6 47 161 47 193.2 0 298.8-160 298.8-298.7 0-4.6-.2-9.1-.4-13.6 20.8-14.7 38.3-33.2 52.6-54.5z" />
+    </symbol>
+  </svg>
+  ${app} ${scripts}
+  <div hidden id="snipcart" data-api-key="MzIwNDI1ZGItYjhkNC00YzVkLTgwMjktNWJjMDM5M2I0OThlNjM3Njg1MTU3Njc0MDc0NTQx
+"></div>
+</body>
 
 </html>
